[workspace]
members = ["beth-rs"]
resolver = "3"

[package]
name = "bevy-beth"
version = "0.1.0"
edition = "2024"

[dependencies]
beth-rs = { path = "beth-rs" }
bevy = { version = "0.19", default-features = false, features = ["bevy_asset"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
