[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
# Internal crates (path deps shared across the workspace).
tes-core = { path = "crates/tes-core" }
tes3-esm = { path = "crates/tes3-esm" }
tes3-bsa = { path = "crates/tes3-bsa" }
tes-nif = { path = "crates/tes-nif" }

# Third-party.
nom = "8"
bevy = { version = "0.19", default-features = false, features = ["bevy_asset"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
