[workspace]
members = ["crates/*"]
resolver = "3"

# Shared package metadata, inherited by each crate via `key.workspace = true`.
[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/te-king/bevy-beth"

[workspace.dependencies]
# Internal crates (path deps shared across the workspace).
tes-core = { path = "crates/tes-core" }
tes3-esm = { path = "crates/tes3-esm" }
tes3-bsa = { path = "crates/tes3-bsa" }
tes-nif = { path = "crates/tes-nif" }
tes-testdata = { path = "crates/tes-testdata" }

# Third-party.
bitflags = "2"
nom = "8"
self_cell = "1"
thiserror = "2"
bevy = { version = "0.19", default-features = false, features = ["bevy_asset"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
