[package]
name = "bevy-beth"
version = "0.1.0"
edition = "2024"

[dependencies]
tes3-esm = { workspace = true }
tes3-bsa = { workspace = true }
tes-nif = { workspace = true }
bevy = { workspace = true }

[features]
# Pulls in Bevy's 3D renderer + windowing so models can be drawn on screen. Off by default
# to keep the headless asset-loading path lightweight; the `render_nif` example needs it.
# `bevy/3d` is the umbrella feature for the 3D pipeline (render, core pipeline, PBR, winit);
# `bevy/dds` and `bevy/tga` add the image loaders for Morrowind's textures, which ship as a
# mix of BC-compressed DDS and TGA.
render = ["bevy/3d", "bevy/dds", "bevy/tga"]

[dev-dependencies]
clap = { workspace = true }

[[example]]
name = "render_nif"
required-features = ["render"]
