[package]
name = "bevy-beth"
description = "Bevy plugin loading TES3 (Morrowind) data files: plugins, BSA archives and NIF models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tes-core = { workspace = true }
tes3-esm = { workspace = true }
tes3-bsa = { workspace = true }
tes-nif = { workspace = true }
bevy = { workspace = true }

[features]
# NIF loads emit spawnable scenes: labeled Mesh/StandardMaterial/Image/WorldAsset
# sub-assets. Headless-friendly — pulls bevy_pbr/bevy_world_serialization (and via them
# mesh/image support) but NOT winit/windowing. dds+tga+bmp cover Morrowind's texture
# formats (a handful of vanilla textures are BMPs).
scene = ["bevy/bevy_pbr", "bevy/bevy_world_serialization", "bevy/dds", "bevy/tga", "bevy/bmp"]
# Full renderer + windowing on top of `scene`, so scenes can be drawn on screen.
# The `render_nif` example needs it.
render = ["scene", "bevy/3d"]

[dev-dependencies]
clap = { workspace = true }
tes-testdata = { workspace = true }

[[example]]
name = "render_nif"
required-features = ["render"]

[[example]]
name = "render_cell"
required-features = ["render"]
