[package]
name = "bevy-tes"
description = "Bevy plugin loading TES3 (Morrowind) data files: plugins, BSA archives and NIF models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
self_cell = { workspace = true }
tes-core = { workspace = true }
tes3-esm = { workspace = true }
tes3-bsa = { workspace = true }
tes-nif = { workspace = true }
bevy = { workspace = true }

[features]
default = ["scene"]
# NIF loads emit spawnable scenes: labeled Mesh/StandardMaterial/Image/WorldAsset
# sub-assets. Headless-friendly — pulls bevy_pbr/bevy_world_serialization (and via them
# mesh/image support) but NOT winit/windowing. dds+tga+bmp cover Morrowind's texture
# formats (a handful of vanilla textures are BMPs). The on-screen renderer lives in the
# viewer crates (bevy-render-cell, bevy-render-nif), which enable Bevy's render/window
# features themselves.
scene = ["bevy/bevy_pbr", "bevy/bevy_world_serialization", "bevy/dds", "bevy/tga", "bevy/bmp"]

[dev-dependencies]
clap = { workspace = true }
tes-testdata = { workspace = true }
