[package]
name = "tes-nif"
description = "Parser for NetImmerse .nif models, version 4.0.0.2 (TES3 / Morrowind)"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tes-core = { workspace = true }

[dev-dependencies]
# Tests pull a real .nif out of a BSA archive to exercise the parser.
tes3-bsa = { workspace = true }
tes-testdata = { workspace = true }
