[package]
name = "tes3-bsa"
description = "Zero-copy, mmap-backed reader for TES3 (Morrowind) BSA archives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tes-core = { workspace = true }
thiserror = { workspace = true }
nom = { workspace = true }
memmap2 = "0.9"
self_cell = "1"

[dev-dependencies]
tes-testdata = { workspace = true }
clap = { workspace = true }
