[package]
name = "tes3-bsa"
description = "Zero-copy, mmap-backed reader for TES3 (Morrowind) BSA archives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tes-core = { workspace = true }
thiserror = { workspace = true }
nom = { workspace = true }
self_cell = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tes-testdata = { workspace = true }
clap = { workspace = true }
