[package]
name = "tes3-esm"
description = "Zero-copy parser for TES3 (Morrowind) plugin files (.esm/.esp)"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags = { workspace = true }
tes-core = { workspace = true }
thiserror = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
tes-testdata = { workspace = true }
# The `inspect` example maps the plugin file and prints a summary.
clap = { workspace = true }
memmap2 = { workspace = true }
